// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTableHeaderCell align defaults to left 1`] = `
<table>
  <thead>
    <tr>
      <td
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
          />
        </div>
      </td>
    </tr>
  </thead>
</table>
`;

exports[`EuiTableHeaderCell align renders center when specified 1`] = `
<table>
  <thead>
    <tr>
      <td
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-center-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
          />
        </div>
      </td>
    </tr>
  </thead>
</table>
`;

exports[`EuiTableHeaderCell align renders right when specified 1`] = `
<table>
  <thead>
    <tr>
      <td
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-right-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
          />
        </div>
      </td>
    </tr>
  </thead>
</table>
`;

exports[`EuiTableHeaderCell renders 1`] = `
<th
  aria-label="aria-label"
  class="euiTableHeaderCell testClass1 testClass2 emotion-euiTableHeaderCell-euiTestCss"
  data-test-subj="test subject string"
  role="columnheader"
  scope="col"
>
  <div
    class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
  >
    <span
      class="eui-textTruncate"
      title="children"
    >
      children
    </span>
  </div>
</th>
`;

exports[`EuiTableHeaderCell sorting does not render a button with readOnly 1`] = `
<table>
  <thead>
    <tr>
      <th
        aria-sort="descending"
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="Test"
          >
            Test
          </span>
          <span
            class="euiTableSortIcon"
            data-euiicon-type="sortDown"
          />
        </div>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`EuiTableHeaderCell sorting renders a button with onSort 1`] = `
<table>
  <thead>
    <tr>
      <th
        aria-sort="descending"
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
      >
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
        >
          <button
            class="euiTableHeaderButton euiTableHeaderButton-isSorted emotion-euiTableHeaderCell__button"
            data-test-subj="tableHeaderSortButton"
            type="button"
          >
            <div
              class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
            >
              <span
                class="eui-textTruncate"
                title="Test"
              >
                Test
              </span>
              <span
                class="euiTableSortIcon"
                data-euiicon-type="sortDown"
              />
            </div>
          </button>
        </span>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`EuiTableHeaderCell sorting renders a sort arrow upwards with isSortAscending 1`] = `
<table>
  <thead>
    <tr>
      <th
        aria-sort="ascending"
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="Test"
          >
            Test
          </span>
          <span
            class="euiTableSortIcon"
            data-euiicon-type="sortUp"
          />
        </div>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`EuiTableHeaderCell sorting renders a sort arrow with isSorted 1`] = `
<table>
  <thead>
    <tr>
      <th
        aria-sort="descending"
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="Test"
          >
            Test
          </span>
          <span
            class="euiTableSortIcon"
            data-euiicon-type="sortDown"
          />
        </div>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`EuiTableHeaderCell sorting renders with a sortable icon if \`onSort\` is passed 1`] = `
<table>
  <thead>
    <tr>
      <th
        aria-sort="none"
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
      >
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
        >
          <button
            class="euiTableHeaderButton emotion-euiTableHeaderCell__button"
            data-test-subj="tableHeaderSortButton"
            type="button"
          >
            <div
              class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
            >
              <span
                class="eui-textTruncate"
                title="Test"
              >
                Test
              </span>
              <span
                class="euiTableSortIcon euiTableSortIcon--sortable"
                color="subdued"
                data-euiicon-type="sortable"
              />
            </div>
          </button>
        </span>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`EuiTableHeaderCell width and style accepts style attribute 1`] = `
<table>
  <thead>
    <tr>
      <th
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
        style="width: 20%;"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="Test"
          >
            Test
          </span>
        </div>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`EuiTableHeaderCell width and style accepts width attribute 1`] = `
<table>
  <thead>
    <tr>
      <th
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
        style="width: 10%;"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="Test"
          >
            Test
          </span>
        </div>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`EuiTableHeaderCell width and style accepts width attribute as number 1`] = `
<table>
  <thead>
    <tr>
      <th
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
        style="width: 100px;"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="Test"
          >
            Test
          </span>
        </div>
      </th>
    </tr>
  </thead>
</table>
`;

exports[`EuiTableHeaderCell width and style resolves style and width attribute 1`] = `
<table>
  <thead>
    <tr>
      <th
        class="euiTableHeaderCell emotion-euiTableHeaderCell"
        role="columnheader"
        scope="col"
        style="width: 10%;"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
        >
          <span
            class="eui-textTruncate"
            title="Test"
          >
            Test
          </span>
        </div>
      </th>
    </tr>
  </thead>
</table>
`;
